<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="horizontal">
        <ImageView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/btn_search"/>
    
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp"
        	android:textSize="30sp"
        	android:text="@string/search"/>
    </LinearLayout>
    
    <EditText 
        android:id="@+id/search_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/searchhint"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:textSize="20sp"
        	android:text="@string/ok"/>
    
    	<Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="40dp"
        	android:layout_weight="1"
        	android:textSize="20sp"
        	android:text="@string/cancle"/>
    </LinearLayout>
    

</LinearLayout>
