<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/aboutsoftware_top"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/bg"  >

    	<ImageButton 
        	android:id="@+id/aboutsoftware_back"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="10dp"
        	android:background="@color/transparent"
        	android:src="@drawable/btn_back"/>
    
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerInParent="true" 
        	android:textSize="20sp"
        	android:text="@string/leftmenu4"/>

	</RelativeLayout>
	
	<ScrollView 
	    android:layout_below="@id/aboutsoftware_top"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical" >
    	
        <LinearLayout
            android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:orientation="vertical">
       		
    		<LinearLayout
        		android:id="@+id/aboutsoftware"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:paddingLeft="10dp"
        		android:orientation="horizontal" >
        
        		<ImageView     
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" 
            		android:src="@drawable/icon" />
        
        		<TextView
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" 
            		android:layout_gravity="center_vertical"
            		android:layout_marginLeft="20dp"   
            		android:textSize="16sp"        
            		android:text="@string/version" />
        
    		</LinearLayout>
    
    		<LinearLayout
        		android:id="@+id/recommend"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="10dp"
        		android:paddingLeft="10dp"
        		android:orientation="vertical" >
    
    			<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        
       	 			android:textSize="20sp"
       	 			android:text="@string/recommend" />

    			<ImageView 
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content" 
        			android:src="@drawable/apps" />
    		</LinearLayout>
    
    		<LinearLayout
        		android:id="@+id/contactus"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:paddingLeft="10dp"
        		android:orientation="vertical" >
    
   	 			<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content" 
        			android:textSize="20sp"
        			android:text="@string/contactus" />
    
    			<LinearLayout
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content" 
        			android:layout_marginTop="10dp"
        			android:orientation="horizontal">

        			<TextView
            			android:id="@+id/phonenumber"
            			android:layout_width="wrap_content"
        				android:layout_height="wrap_content" 
        				android:layout_weight="1"
        				android:textSize="16sp"
        				android:text="@string/phonenumber"/>
        
        			<TextView
            			android:id="@+id/website"
            			android:layout_width="wrap_content"
        				android:layout_height="wrap_content" 
        				android:layout_weight="1"
        				android:textSize="16sp"
        				android:text="@string/website"/>        
    			</LinearLayout>
    
    			<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content" 
        			android:layout_marginTop="10dp"
        			android:textSize="16sp"
        			android:text="@string/welcome"/> 
    		</LinearLayout>
        
    		<LinearLayout 
        		android:paddingLeft="40dp"
        		android:paddingRight="40dp"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="40dp">
    	
    			<Button
        			android:id="@+id/aboutsoftware_exit"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"  
        			android:textColor="@color/white"      
        			android:text="@string/exit"
        			android:background="@drawable/btn_exit" />
    		</LinearLayout>
    	</LinearLayout>
	</ScrollView>
</RelativeLayout>
