<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout 
       android:id="@+id/setting_top"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/bg"  >

    	<ImageButton 
        	android:id="@+id/setting_back"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="10dp"
        	android:background="@color/transparent"
        	android:src="@drawable/btn_back"/>
    
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerInParent="true"
			android:textSize="20sp"
        	android:text="@string/leftmenu2"/>

	</RelativeLayout>
	
    <RelativeLayout 
        android:id="@+id/setting1"
        android:layout_below="@id/setting_top"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/notification"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />
        
        <ToggleButton 
            android:id="@+id/notificationTog"  
        	android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
        	android:layout_alignParentRight="true"
        	android:layout_centerVertical="true"
        	android:paddingRight="10dp"
        	android:background="@color/transparent"  
        	android:button="@drawable/btn_close"        	
        	android:checked="false" 
        	android:textOn=""
        	android:textOff=""
        	android:text="" />   
  
    </RelativeLayout> 
    
    <View
        android:id="@+id/line1"
        android:layout_below="@id/setting1"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="2dp"
        android:background="@color/lightgrade" />
    
    <RelativeLayout 
        android:id="@+id/setting2"
        android:layout_below="@id/line1"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"  >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/shake"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />
        
        <ToggleButton 
            android:id="@+id/shakeTog"  
        	android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
        	android:layout_alignParentRight="true"
        	android:layout_centerVertical="true"
        	android:paddingRight="10dp"
        	android:background="@color/transparent"  
        	android:button="@drawable/btn_open"        	
        	android:checked="true" 
        	android:textOn=""
        	android:textOff=""
        	android:text="" />   
    </RelativeLayout>
    
    <View
        android:id="@+id/line2"
        android:layout_below="@id/setting2"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="2dp"
        android:background="@color/lightgrade" />
    
    <RelativeLayout 
        android:id="@+id/setting3"
        android:layout_below="@id/line2"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/updatesoftware"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    
    <View
        android:id="@+id/line3"
        android:layout_below="@id/setting3"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="2dp"
        android:background="@color/lightgrade" />
    
    <RelativeLayout 
        android:id="@+id/setting4"
        android:layout_below="@id/line3"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/leftmenu4"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />
        
        <ImageView
        	android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
        	android:paddingRight="30dp"
        	android:layout_alignParentRight="true"
        	android:background="@color/transparent"  
        	android:src="@drawable/btn_enter"  />   
    </RelativeLayout>
    
    <View
        android:id="@+id/line4"
        android:layout_below="@id/setting4"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="2dp"
        android:background="@color/lightgrade" />
    
    <RelativeLayout 
        android:id="@+id/setting5"
        android:layout_below="@id/line4"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/leftmenu5"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />
        
        <ImageView
        	android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
        	android:paddingRight="30dp"
        	android:layout_alignParentRight="true"
        	android:background="@color/transparent"  
        	android:src="@drawable/btn_enter"  />   
    </RelativeLayout>
    
    <View
        android:id="@+id/line5"
        android:layout_below="@id/setting5"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="2dp"
        android:background="@color/lightgrade" />
    
    <include
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	layout="@layout/main_function"/>

</RelativeLayout>
